package com.adventure.learning.yzlibrary.log;

public interface JsonParser {
    public String parse(String json);
}
